# National-Election---E-vote

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: db.sqlite3.backup  package-lock.json  package.json
core/project/: context_processors.py  settings.py  urls.py
core/public/: admin.py  forms.py  models.py  urls.py  views.py
core/public/migrations/: 0001_initial.py  0002_comptition_request_model.py  0002_comptition_request_model_publish_status.py  0002_comptition_request_model_status_approvement_token.py  0002_vote.py  0003_alter_approvement_token_request_status.py  0003_vote_slug.py  0004_remove_vote_slug.py  0004_rename_is_uesd_approvement_token_is_used_and_more.py  0005_alter_approvement_token_id_and_more.py
core/static/Design/Font/: fonts.css
core/static/src/: output.css
core/staticfiles/src/: output.css
core/templates/: base.html
core/templates/Pages/: index.html
core/templates/public/: base.html
core/templates/public/Include/: Navbar.html
core/templates/public/Pages/: index.html
core/templates/public/Pages/Admin-request/: display-request-info.html
core/templates/public/Pages/Comp-page/: compition-request-page.html
core/templates/public/Pages/Party publish/: Party_publish.html
core/templates/public/Pages/Pass-reset/: password-reset.html
core/templates/public/Pages/SubPages/: Election.html
core/templates/public/Pages/SubPages/Log/: SignUp.html
core/templates/public/Pages/User Token/: UserToken.html
core/templates/public/Vote/: vote.html
core/templates/public/Vote/Review_and_vote/: review_and_vote.html
(+3 files in other folders)
